# aws-durable-execution-sdk-python

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/scripts/: build_lambda_layer.py  ci-checks.sh  lintcommit.py
.github/workflows/: ci.yml  cloud-tests.yml  conformance-tests.yml  deploy-examples.yml  ecr-release.yml  integration-tests.yml  lambda-layer-publish.yml  lintcommit.js  notify-issues.yml  notify-pr.yml  notify-release.yml  notify_slack.yml  pypi  pypi-publish.yml  scorecard.yml  sync-package.yml  test-parser.yml  update-sam-template.yml  upload-build-to-s3.yml
docs/: DAG_STATUS_PYTHON.md  architecture.md  best-practices.md  dag.md  getting-started.md  index.md
docs/advanced/: .gitkeep  error-handling.md  serialization.md
docs/api-reference/: .gitkeep
docs/core/: callbacks.md  child-contexts.md  invoke.md  logger.md  map.md  parallel.md  steps.md  wait.md
docs/testing-patterns/: .gitkeep  basic-tests.md  complex-workflows.md  stores.md
examples/: cli.py  examples-catalog.json  template.yaml
examples/src/: config.yaml
flake8-durable-execution/: README.md  pyproject.toml
flake8-durable-execution/examples/: bad_patterns.py
flake8-durable-execution/src/flake8_durable_execution/: __init__.py  checker.py
flake8-durable-execution/src/flake8_durable_execution/rules/: __init__.py  base.py  closure_mutation.py  datetime_now.py  nested_durable_op.py  network_call.py  os_environ.py  random_call.py  time_time.py  uuid_generation.py
flake8-durable-execution/tests/: test_checker.py
ops/: ci-checks.sh  lintcommit.py  parse_sdk_branch.py
ops/__tests__/: test_lintcommit.py  test_parse_sdk_branch.py
ops/tests/: test_lintcommit.py
src/aws_durable_execution_sdk_python/: __about__.py  __init__.py  concurrency.py  config.py  (+13 more)
tests/: concurrency_test.py  config_test.py  conftest.py  context_replay_properties_test.py  context_replay_property_test.py  context_test.py  dag_support.py  durable_executions_python_language_sdk_test.py  exceptions_test.py  execution_test.py  lambda_context_test.py  lambda_service_test.py  logger_test.py  pbt_child_context_replay_status_test.py  pbt_logger_suppression_test.py  pbt_operation_scoping_isolation_test.py  pbt_root_context_replay_status_test.py  plugin_test.py  retries_test.py  serdes_test.py  state_test.py  suspend_test.py  test_helpers.py  threading_test.py  types_test.py  waits_test.py  with_retry_test.py
(+74 files in other folders)
